liste prestations filtres

--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -140,7 +140,7 @@
                     <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload" class="ui-button-success"
                             (click)="saveNewCollaborateur()"></button>
 
-                    <button #bPrestas pButton type="button" label="Visualiser les prestations" class="ui-button-success"
+                    <button pButton type="button" label="{{buttonPrestationsLabels[idxBtnPrestations]}}" class="ui-button-success"
                             (click)="showPrestations()"></button>
                 </div>
             </p-footer>
