fix menu link admin

--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-                <div routerLink="collaborateurs" class="ui-g-4 case">
+                <div routerLink="/administration" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
                             <a *ngIf="isAdmin$ | async">
