--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -55,7 +55,7 @@
                 </p-multiSelect>
                 <div *ngSwitchCase="'date'" [ngStyle]="{'padding-right':'2em'}">
                     <p-calendar [(ngModel)]="filtres[col.field].selected" [showIcon]="true" [showButtonBar]="true"
-                                dateFormat="yy-mm-dd" [locale]="fr" (onSelect)="pt_filter(col.field);"
+                                dateFormat="dd-MM-yyyy"  (onSelect)="pt_filter(col.field);"
                                 (onClearClick)="pt_filter(col.field);"
                                 [inputStyle]="{'max-width':'100%', 'text-overflow':'ellipsis'}"
                                 [style]="{'display':'inline-block', 'max-width':'100%', 'min-width':'auto', 'text-overflow':'ellipsis'}">
@@ -93,7 +93,9 @@
 
             <!-- DataRows -->
             <td *ngFor="let col of columns" [ngSwitch]="filtres[col.field].filtertype">
-                <span *ngSwitchCase="'date'">{{rowData[col.field] | date:'yyyy-MM-dd'}}</span>
+
+                <span *ngSwitchCase="'date'">{{rowData[col.field] | date:"dd/MM/yyyy" }}</span>
+
                 <span *ngSwitchDefault>{{rowData[col.field]}}</span>
             </td>
 
