--- a/src/core/components/core-footer/core-footer.component.html
+++ b/src/core/components/core-footer/core-footer.component.html
@@ -8,7 +8,7 @@
         <a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-github"></i></a>
         <div style="color: #1fb4fc;text-align: left;bottom: 10px;float:bottom">Version : {{version}}</div>
-        <div style="text-align: left;bottom: 10px;float:bottom">Date : {{date}}</div>
+        <div style="text-align: left;bottom: 10px;float:bottom">Date : {{date1}}</div>
     </span>
 
 </div>
