--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -125,9 +125,9 @@
                                      data-themekey="#">
                             </a>
                         </div>
-                        <div class="card-legend">Référentiel</div>
+                        <div class="card-legend">Référenciel</div>
                         <div class="description">
-                            <div style="padding-top: 5px">Gérer les tables du référentiel</div>
+                            <div style="padding-top: 5px">Gérer les tables du référenciel</div>
                         </div>
                     </div>
                 </div>
