--- a/src/core/components/core-profile/core-profile.component.html
+++ b/src/core/components/core-profile/core-profile.component.html
@@ -28,34 +28,25 @@
             <div class="layout-menu-tooltip-text">Profile</div>
         </div>
     </li>
-    <li role="menuitem">
-        <a href="#" [attr.tabindex]="!active ? '-1' : null">
-            <i class="fa fa-fw fa-user-secret"></i>
-            <span>Privacy</span>
-        </a>
-        <div class="layout-menu-tooltip">
-            <div class="layout-menu-tooltip-arrow"></div>
-            <div class="layout-menu-tooltip-text">Privacy</div>
-        </div>
-    </li>
+
     <li role="menuitem">
         <a href="#" [attr.tabindex]="!active ? '-1' : null">
             <i class="fa fa-fw fa-cog"></i>
-            <span>Settings</span>
+            <span>Paramètres</span>
         </a>
         <div class="layout-menu-tooltip">
             <div class="layout-menu-tooltip-arrow"></div>
-            <div class="layout-menu-tooltip-text">Settings</div>
+            <div class="layout-menu-tooltip-text">Paramètres</div>
         </div>
     </li>
     <li role="menuitem">
         <a [routerLink]="['/login']" [attr.tabindex]="!active ? '-1' : null">
             <i class="fa fa-fw fa-sign-out"></i>
-            <span>Logout</span>
+            <span>Déconnexion</span>
         </a>
         <div class="layout-menu-tooltip">
             <div class="layout-menu-tooltip-arrow"></div>
-            <div class="layout-menu-tooltip-text">Logout</div>
+            <div class="layout-menu-tooltip-text">Déconnexion</div>
         </div>
     </li>
 </ul>
