--- a/src/app/component/charts/charts.component.html
+++ b/src/app/component/charts/charts.component.html
@@ -1,4 +1,11 @@
-    <div class=" charts">
+<div class="ui-g-12 ui-md-12" style="padding:0px 20px">
+    <div class="panel-gray title" style="width:100%; text-align:center">
+        <span class=" white">Tableau de bord des Assistances Techniques de la SG au </span>
+        <p-calendar [(ngModel)]="at_date$"  dateFormat="dd/mm/yy" [showIcon]="true" onSelect="update()"></p-calendar>
+    </div>
+</div>
+
+<div class=" charts">
         <div class="ui-g-6 ui-lg-6 charts1">
             <div class="card">
                 <h5 class="centerText">Taux de sous-traitance</h5>
