import all table

--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -66,7 +66,7 @@
                 </p-fileUpload>
 
                 <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
-                        class="ui-button-success" (click)="saveRefTable(alltable, true)"></button>
+                        class="ui-button-success" (click)="saveAllRefTable(alltable)"></button>
             </div>
         </p-toolbar>
         <br>
