fix resource serice 6

--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -131,7 +131,7 @@
 
             <!-- PRESTATIONS -->
             <!--app-prestations *ngIf="bShowPrestas"></app-prestations-->
-            <div [ngStyle]="{'display': showPrestas}"><app-prestations [collab]=""></app-prestations></div>
+            <div [ngStyle]=""><app-prestations [collab]=""></app-prestations></div>
             <!-- Dynamic way : ng-template ad-host></ng-template-->
 
             <!-- FOOTER -->
