--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -77,81 +77,95 @@
 
 
 
+<!-- >>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<-->
+<!-- >>>>>>>>>>>>>>> D I A L O G <<<<<<<<<<<<<<<<<<<-->
+<!-- >>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<-->
 
-<p-dialog header="{{title}}" [(visible)]="displayDialog" [responsive]="true" [modal]="true" [styleClass]="'importcsv'">
+<p-dialog [(visible)]="displayDialog" [responsive]="true" [modal]="true" [styleClass]="'importcsv'">
+    <p-header>
+        <span style="display:inline-block; width:80%">{{title}}</span><span style="display:inline-block">Statut "{{allstatusidx[selectedCollaborateur['statutCollab']]}}" - Version {{selectedCollaborateur['versionCollab']}}</span>
+    </p-header>
+    <div class="ui-g ui-fluid">
 
-        <div class="ui-g ui-fluid">
-
-            <p-fieldset *ngFor="let fiche of FieldsFiches" legend="{{fiche.grplabel}}" class="ui-g-12 ui-md-6">
+        <p-fieldset *ngFor="let fiche of FieldsFiches" legend="{{fiche.grplabel}}" class="ui-g-12 ui-md-6" [ngSwitch]="fiche.grp">
+            <div *ngSwitchCase="'Mission'">
+                <div *ngIf="lastMission">
+                    <div *ngFor="let field of fiche.fields" class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon" [ngStyle]="{'width':'30%','text-align':'left'}">{{colsIndex[field]}} :</span>
+                        <input type="text" pInputText [(ngModel)]="lastMission[field]">
+                    </div>
+                </div>
+                <div *ngIf="lastMission==null">
+                    Il n'existe aucune mission pour ce collaborateur.
+                </div>
+            </div>
+            <div *ngSwitchDefault>
                 <div *ngFor="let field of fiche.fields" class="ui-inputgroup">
                     <span class="ui-inputgroup-addon" [ngStyle]="{'width':'30%','text-align':'left'}">{{colsIndex[field]}} :</span>
-                    <input type="text" pInputText placeholder="{{colsIndex[field]}}" [(ngModel)]="selectedCollaborateur[field]">
+                    <input type="text" pInputText [(ngModel)]="selectedCollaborateur[field]">
                 </div>
-            </p-fieldset>
+            </div>
+        </p-fieldset>
+    </div>
+
+    <!-- PRESTATIONS -->
+    <!--app-prestations *ngIf="bShowPrestas"></app-prestations-->
+    <div [ngStyle]="{'display': showPrestas}"><app-prestations [collab]="selectCollaborateur"></app-prestations></div>
+    <!-- Dynamic way : ng-template ad-host></ng-template-->
+
+    <!-- FOOTER -->
+    <p-footer>
+        <div class="ui-dialog-buttonpane ui-helper-clearfix" [ngStyle]="{'text-align':'left'}">
+            <button *ngFor="let label of buttonsCollabLabels; let i=index" pButton type="button" label="{{label}}" class="ui-button-success" (click)="buttonsFunctions(i)" [disabled]="buttonsCollabDisabled[i]"></button>
         </div>
+    </p-footer>
 
-        <!-- PRESTATIONS -->
-        <!--app-prestations *ngIf="bShowPrestas"></app-prestations-->
-        <div [ngStyle]="{'display': showPrestas}"><app-prestations [collab]="selectCollaborateur"></app-prestations></div>
-        <!-- Dynamic way : ng-template ad-host></ng-template-->
 
-        <!-- FOOTER -->
+    <!--p-tabPanel header="Importer" leftIcon="pi pi-inbox">
+
+        <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
+                 columnResizeMode="expand" [responsive]="true" #tt [columns]="selectedColumns" [value]="csvRecords"
+                 [paginator]="true" [rows]="10">
+
+            <ng-template pTemplate="caption">
+                <div style="text-align:left">
+                    <p-multiSelect [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header"
+                                   selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
+                                   defaultLabel="Choose Columns"></p-multiSelect>
+                </div>
+            </ng-template>
+
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+
+                    <td *ngFor="let col of columns">
+                        {{rowData[col.field]}}
+                    </td>
+                </tr>
+
+            </ng-template>
+        </p-table>
         <p-footer>
-            <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload" class="ui-button-success"
-                        (click)="saveNewCollaborateur()"></button>
+            <div class="ui-toolbar-group-left">
+                <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
+                        class="ui-button-success" (click)="saveNewCollaborateur()"></button>
 
-                <button pButton type="button" label="{{buttonPrestationsLabels[idxBtnPrestations]}}" class="ui-button-success"
-                        (click)="showPrestations()"></button>
+
+                <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".csv" customUpload="true"
+                              (uploadHandler)="onUpload($event)" auto="true"
+                              chooseLabel="Importer les collaborateurs"></p-fileUpload>
             </div>
         </p-footer>
 
-
-        <!--p-tabPanel header="Importer" leftIcon="pi pi-inbox">
-
-            <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
-                     columnResizeMode="expand" [responsive]="true" #tt [columns]="selectedColumns" [value]="csvRecords"
-                     [paginator]="true" [rows]="10">
-
-                <ng-template pTemplate="caption">
-                    <div style="text-align:left">
-                        <p-multiSelect [options]="cols" [(ngModel)]="selectedColumns" optionLabel="header"
-                                       selectedItemsLabel="{0} columns selected" [style]="{minWidth: '200px'}"
-                                       defaultLabel="Choose Columns"></p-multiSelect>
-                    </div>
-                </ng-template>
-
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th *ngFor="let col of columns">
-                            {{col.header}}
-                        </th>
-                    </tr>
-
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData">
-
-                        <td *ngFor="let col of columns">
-                            {{rowData[col.field]}}
-                        </td>
-                    </tr>
-
-                </ng-template>
-            </p-table>
-            <p-footer>
-                <div class="ui-toolbar-group-left">
-                    <button pButton type="button" label="Créer les collaborateurs" icon="pi pi-upload"
-                            class="ui-button-success" (click)="saveNewCollaborateur()"></button>
-
-
-                    <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".csv" customUpload="true"
-                                  (uploadHandler)="onUpload($event)" auto="true"
-                                  chooseLabel="Importer les collaborateurs"></p-fileUpload>
-                </div>
-            </p-footer>
-
-        </p-tabPanel>
+    </p-tabPanel>
 
     </p-tabView-->
 
