--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -74,13 +74,13 @@
 
         <p-accordion [multiple]="true" *ngFor="let item of all_sheet_name; let i = index">
             <p-accordionTab header="">
-                <p-header class="" style="">
+                <p-header class="" style="pointer-events:initial;  ">
 
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a>
                     </div>
-                    <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
-                        <button pButton type="button" label="Importer la table" icon="pi pi-upload"
-                                class="ui-button-success" (click)="saveRefTable(alltable[i])"></button>
+                    <div  class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
+                        <button   pButton  type="button" label="Importer la table" icon="pi pi-upload"
+                                class="ui-button-success" (click)="saveRefTable($event, alltable[i])"></button>
                     </div>
                 </p-header>
 
