import all table finish

--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -65,8 +65,9 @@
 
                 </p-fileUpload>
 
-                <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
+                <button pButton [(disabled)]="resetRef" type="button" label="Importer toutes les tables" icon="pi pi-upload"
                         class="ui-button-success" (click)="saveAllRefTable(alltable)"></button>
+
             </div>
         </p-toolbar>
         <br>
@@ -79,6 +80,8 @@
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a>
                     </div>
                     <div  class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
+                        <!--<p-progressBar [value]="value"></p-progressBar>-->
+
                         <button   pButton  type="button" label="Importer la table" icon="pi pi-upload"
                                 class="ui-button-success" (click)="saveRefTable($event, alltable[i])"></button>
                     </div>
