--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -65,8 +65,13 @@
 
                 </p-fileUpload>
 
-                <button pButton [(disabled)]="resetRef" type="button" label="Importer toutes les tables" icon="pi pi-upload"
+                <button pButton [(disabled)]="resetRef" type="button" label="Importer toutes les tables"
+                        icon="pi pi-upload"
                         class="ui-button-success" (click)="saveAllRefTable(alltable)"></button>
+                <div class="ui-toolbar-group-right" style="margin: 2px" [style.visibility]="loaderImport ? 'visible' : 'hidden'">
+                    <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8"
+                                       animationDuration=".5s"></p-progressSpinner>
+                </div>
 
             </div>
         </p-toolbar>
@@ -79,12 +84,21 @@
 
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a>
                     </div>
-                    <div  class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
-                        <!--<p-progressBar [value]="value"></p-progressBar>-->
 
-                        <button   pButton  type="button" label="Importer la table" icon="pi pi-upload"
-                                class="ui-button-success" (click)="saveRefTable($event, alltable[i])"></button>
+
+                    <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
+                        <!--<p-progressBar [value]="value"></p-progressBar>-->
+                        <div class="ui-toolbar-group-left" style="margin: 3px" [style.visibility]="loader[i] ? 'visible' : 'hidden'">
+                            <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8" fill="#EEEEEE"
+                                               animationDuration=".5s"></p-progressSpinner>
+                        </div>
+
+                        <button pButton type="button" label="Importer la table" icon="pi pi-upload"
+                                class="ui-button-success" (click)="saveRefTable($event, alltable[i],i)">
+
+                        </button>
                     </div>
+
                 </p-header>
 
                 <p-table [style]="{'overflow':'auto!important'}" [resizableColumns]="true"
